Do not dist gir_DATA
GIR files contain a shared-library attribute which varies per platform,
and therefore must not be disted; see bug 621611 for rationale.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=665938

Signed-off-by: Yaakov Selkowitz <yselkowitz@users.sourceforge.net>
Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -42,9 +42,11 @@ libgrlnet_@GRL_MAJORMINOR@include_HEADERS =	\
 
 MAINTAINERCLEANFILES =	\
 	*.in		\
+	*.gir		\
 	*~
 
 DISTCLEANFILES = $(MAINTAINERCLEANFILES)
+
 CLEANFILES =
 
 # introspection support
@@ -68,7 +70,7 @@ GrlNet_@GRL_MAJORMINOR_NORM@_gir_FILES = $(introspection_sources)
 INTROSPECTION_GIRS += GrlNet-@GRL_MAJORMINOR@.gir
 
 girdir = $(datadir)/gir-1.0
-dist_gir_DATA = $(INTROSPECTION_GIRS)
+gir_DATA = $(INTROSPECTION_GIRS)
 
 typelibdir = $(libdir)/girepository-1.0
 typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
