doc: Update Copyright notice
Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Author: Iago Toral Quiroga <itoral@igalia.com>
 #
-# Copyright (C) 2010 Igalia S.L. All rights reserved.
+# Copyright (C) 2010, 2011 Igalia S.L. All rights reserved.
 
 ACLOCAL_AMFLAGS = -I m4
 
