core: Fix distcheck
grl-inspect.1 was not distributed correctly.

--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ if BUILD_GRILO_NET
 pkgconfig_DATA += grilo-net-0.2.pc
 endif
 
-man1_MANS = grl-inspect.1
+dist_man1_MANS = grl-inspect.1
 
 MAINTAINERCLEANFILES = \
         aclocal.m4 \
