grl-inspect: Add major.minor version suffix to executable
It creates grl-inspect-0.1 or grl-inspect-0.2, so we can have both versions
installed in the same host.

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/tools/grilo-inspect/Makefile.am
+++ b/tools/grilo-inspect/Makefile.am
@@ -7,23 +7,23 @@
 
 INCLUDES = $(DEPS_CFLAGS)
 
-bin_PROGRAMS = grl-inspect
+bin_PROGRAMS = grl-inspect-@GRL_MAJORMINOR@
 
-grl_inspect_SOURCES =	\
+grl_inspect_@GRL_MAJORMINOR@_SOURCES =	\
 	grl-inspect.c
 
-grl_inspect_CFLAGS =		\
-	-DPREFIX=$(prefix)	\
-	-I$(top_srcdir)/src	\
+grl_inspect_@GRL_MAJORMINOR@_CFLAGS =	\
+	-DPREFIX=$(prefix)						\
+	-I$(top_srcdir)/src						\
 	-I$(top_srcdir)/src/data
 
-grl_inspect_LDADD =	\
-	$(DEPS_LIBS)	\
-	$(GTK_LIBS)	\
+grl_inspect_@GRL_MAJORMINOR@_LDADD =	\
+	$(DEPS_LIBS)								\
+	$(GTK_LIBS)									\
 	$(top_builddir)/src/lib@GRL_NAME@.la
 
 MAINTAINERCLEANFILES =	\
-	*.in		\
+	*.in						\
 	*~
 
 DISTCLEANFILES = $(MAINTAINERCLEANFILES)
