test-ui: Add major.minor version suffix to executable
It creates grl-test-ui-0.1 or grl-test-ui-0.2, so we can have both versions
installed in the same host.

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/tools/grilo-test-ui/Makefile.am
+++ b/tools/grilo-test-ui/Makefile.am
@@ -7,28 +7,28 @@
 
 INCLUDES = $(DEPS_CFLAGS)
 
-bin_PROGRAMS = grilo-test-ui
+bin_PROGRAMS = grilo-test-ui-@GRL_MAJORMINOR@
 
-grilo_test_ui_SOURCES =	\
-	main.c		\
-	flickr-auth.h	\
+grilo_test_ui_@GRL_MAJORMINOR@_SOURCES =	\
+	main.c											\
+	flickr-auth.h									\
 	flickr-auth.c
 
-grilo_test_ui_CFLAGS =		\
-	-DPREFIX=$(prefix)	\
-	$(GTU_CFLAGS)		\
-	$(GRL_FLICKR_CFLAGS)	\
-	-I$(top_srcdir)/src	\
+grilo_test_ui_@GRL_MAJORMINOR@_CFLAGS =	\
+	-DPREFIX=$(prefix)							\
+	$(GTU_CFLAGS)									\
+	$(GRL_FLICKR_CFLAGS)							\
+	-I$(top_srcdir)/src							\
 	-I$(top_srcdir)/src/data
 
-grilo_test_ui_LDADD =		\
-	$(DEPS_LIBS)		\
-	$(GTU_LIBS)		\
-	$(GRL_FLICKR_LIBS)	\
+grilo_test_ui_@GRL_MAJORMINOR@_LDADD =		\
+	$(DEPS_LIBS)									\
+	$(GTU_LIBS)										\
+	$(GRL_FLICKR_LIBS)							\
 	$(top_builddir)/src/lib@GRL_NAME@.la
 
 MAINTAINERCLEANFILES =	\
-	*.in		\
+	*.in						\
 	*~
 
 DISTCLEANFILES = $(MAINTAINERCLEANFILES)
