grl-net: Use libsoup context threads for libsoup 2.39 or above
Add SOUP_SESSION_USE_THREAD_CONTEXT to soup sessions for libsoup >= 2.39.

Otherwise, it will not work

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -25,6 +25,11 @@ libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS += \
 	-DLIBSOUP_WITH_CACHE
 endif
 
+if BUILD_GRILO_NET_WITH_THREAD_CONTEXT
+libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS += \
+	-DLIBSOUP_WITH_THREAD_CONTEXT
+endif
+
 libgrlnet_@GRL_MAJORMINOR@_la_LIBADD =	\
 	$(top_builddir)/src/lib@GRL_NAME@.la	\
 	$(DEPS_LIBS)				\
