net: tune up gir build

--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -72,8 +72,12 @@ introspection_sources =	\
 	$(gir_sources)
 
 GrlNet-@GRL_MAJORMINOR@.gir: libgrlnet-@GRL_MAJORMINOR@.la
-GrlNet_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 Gio-2.0
-GrlNet_@GRL_MAJORMINOR_NORM@_gir_CFLAGS = -I$(top_srcdir)/libs $(libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS)
+GrlNet_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 Soup-2.4
+if BUILD_GRILO_NET_WITH_CACHE
+GrlNet_@GRL_MAJORMINOR_NORM@_gir_INCLUDES += Gio-2.0
+endif
+GrlNet_@GRL_MAJORMINOR_NORM@_gir_CFLAGS = -I $(top_srcdir)/src \
+	-I $(top_srcdir)/src/data -I $(top_srcdir)/libs
 GrlNet_@GRL_MAJORMINOR_NORM@_gir_LIBS = libgrlnet-@GRL_MAJORMINOR@.la
 GrlNet_@GRL_MAJORMINOR_NORM@_gir_FILES = $(introspection_sources)
 INTROSPECTION_GIRS += GrlNet-@GRL_MAJORMINOR@.gir
