--- a/configure.ac
+++ b/configure.ac
@@ -175,7 +175,7 @@ AC_ARG_ENABLE([vala],
 AC_MSG_RESULT([$enable_vala])
 if test "x$enable_vala" != "xno"; then
 	valapkg=""
-	m4_foreach([VERSION], [[0.12], [0.14], [0.16]],
+	m4_foreach([VERSION], [[0.12], [0.14], [0.16], [0.18]],
 		   [PKG_CHECK_EXISTS([ libvala-VERSION ],
                            [ valapkg="libvala-VERSION" ])
 		   ])
