--- a/debian/control
+++ b/debian/control
@@ -3,9 +3,9 @@ Section: libs
 Priority: extra
 Maintainer: Juan A. Suarez Romero <jasuarez@igalia.com>
 Build-Depends: cdbs, debhelper (>= 5), gnome-common,
- libvala-0.16-dev (>=0.7.2), valac (>= 0.7.2), gtk-doc-tools,
- libgirepository1.0-dev (>= 0.9.0), gobject-introspection (>= 0.9.0),
- libxml2-dev, libsoup2.4-dev
+ libvala-0.16-dev | libvala-0.14-dev | libvala-0.12-dev, valac (>= 0.7.2),
+ gtk-doc-tools, libgirepository1.0-dev (>= 0.9.0), libgtk-3-dev,
+ gobject-introspection (>= 0.9.0), libxml2-dev, libsoup2.4-dev
 Standards-Version: 3.7.2
 Homepage: http://gitorious.org/grilo
 
