test-ui: We only really support GTK+ 3.x builds
So stop fooling ourselves, that code just doesn't work with GTK+ 2.x

https://bugzilla.gnome.org/show_bug.cgi?id=676823

--- a/configure.ac
+++ b/configure.ac
@@ -99,10 +99,7 @@ AC_SUBST(GLIB_MKENUMS)
 # UI Tool
 # ----------------------------------------------------------
 
-gtkver="gtk+-3.0"
-PKG_CHECK_EXISTS([gtk+-3.0 >= 3.0], [gtkver="gtk+-3.0"], [gtkver="gtk+-2.0"])
-
-PKG_CHECK_MODULES([GTU], [ ${gtkver} ],
+PKG_CHECK_MODULES([GTU], [ gtk+-3.0 >= 3.0 ],
                        [ BUILD_GRILO_TEST_UI=yes ],
                        [ BUILD_GRILO_TEST_UI=no ])
 
