--- a/bindings/vala/grilo-uninstalled.files.in
+++ b/bindings/vala/grilo-uninstalled.files.in
@@ -7,7 +7,7 @@
 @top_builddir@/src/grl-caps.h
 @top_builddir@/src/grl-operation-options.h
 @top_builddir@/src/grl-multiple.h
-@top_builddir@/src/grl-plugin-registry.h
+@top_builddir@/src/grl-registry.h
 @top_builddir@/src/grl-util.h
 @top_builddir@/src/data/
 @top_builddir@/src/.libs/libgrilo-0.2.so
