vala: Do not install VAPI files in specific vapi directory of the compiler
Rather, install it in $(datadir)/vala/vapi place.

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -52,7 +52,7 @@ depsfiles = $(foreach target,$(targets),$(target).deps)
 gifiles = $(foreach target,$(targets),$(target).gi)
 metadatafiles = $(foreach target,$(targets),$(target).metadata)
 
-vapidir = $(VAPIDIR)
+vapidir = $(datadir)/vala/vapi
 
 if HAVE_VALA
 vapifiles = $(foreach target,$(targets),$(target).vapi)
