--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,6 +3,6 @@
 #
 # Author: Iago Toral Quiroga <itoral@igalia.com>
 #
-# Copyright (C) 2011 Igalia S.L. All rights reserved.
+# Copyright (C) 2010-2011 Igalia S.L. All rights reserved.
 
 SUBDIRS = grilo
