--- a/tools/grilo-inspect/Makefile.am
+++ b/tools/grilo-inspect/Makefile.am
@@ -3,7 +3,7 @@
 #
 # Author: Juan A. Suarez Romero <jasuarez@igalia.com>
 #
-# Copyright (C) 2010 Igalia S.L.
+# Copyright (C) 2010-2012 Igalia S.L.
 
 INCLUDES = $(DEPS_CFLAGS)
 
