core: Add "supported-media" property
This property flag for GrlSource specifies the type of media the source can
deal with.

Thus, if our application is designed to show video content only, we could
discard all sources not providing this kind of media.

The default value for this property, if not specified, is GRL_MEDIA_TYPE_ALL.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,7 +15,7 @@ grl-marshal.c: grl-marshal.h grl-marshal.list
 	$(AM_V_GEN) $(GLIB_GENMARSHAL) --prefix grl_marshal	\
 	--body grl-marshal.list >> $@
 
-enum_headers = grl-source.h grl-caps.h grl-operation-options.h
+enum_headers = grl-source.h grl-caps.h grl-operation-options.h data/grl-media.h
 
 grl-type-builtins.h: $(enum_headers) grl-type-builtins.h.template
 	$(AM_V_GEN) $(GLIB_MKENUMS) --template grl-type-builtins.h.template	\
