build: Handle grl-net-mock-private.h file
Include it in Makefile.am

--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -49,7 +49,8 @@ libgrlnet_@GRL_MAJORMINOR@include_HEADERS =	\
 	grl-net.h
 
 noinst_HEADERS = 		\
-	grl-net-private.h
+	grl-net-private.h	\
+	grl-net-mock-private.h
 
 MAINTAINERCLEANFILES =	\
 	*.in		\
