--- a/configure.ac
+++ b/configure.ac
@@ -162,6 +162,11 @@ PKG_CHECK_MODULES(NET, libsoup-2.4,
 PKG_CHECK_EXISTS([libsoup-2.4 >= 2.33.4],
 		 [HAVE_CACHED_LIBSOUP=yes],
 		 [HAVE_CACHED_LIBSOUP=no])
+
+PKG_CHECK_EXISTS([libsoup-2.4 >= 2.41.3],
+                 [HAVE_LIBSOUP_REQUESTER_DEPRECATED=yes],
+                 [HAVE_LIBSOUP_REQUESTER_DEPRECATED=no])
+
 AC_ARG_ENABLE([grl_net],
         AS_HELP_STRING([--enable-grl-net],
                 [Enable Grilo Net library (default: auto)]),
@@ -180,6 +185,7 @@ AC_ARG_ENABLE([grl_net],
 
 AM_CONDITIONAL(BUILD_GRILO_NET, test "x$HAVE_LIBSOUP" = "xyes")
 AM_CONDITIONAL(BUILD_GRILO_NET_WITH_CACHE, test "x$HAVE_CACHED_LIBSOUP" = "xyes")
+AM_CONDITIONAL(BUILD_GRILO_NET_WITH_DEPRECATED_REQUESTER, test "x$HAVE_LIBSOUP_REQUESTER_DEPRECATED" = "xyes")
 
 # ----------------------------------------------------------
 # DEBUG SUPPORT
