--- a/configure.ac
+++ b/configure.ac
@@ -23,7 +23,7 @@ AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src])
 
-AM_CONFIG_HEADER(src/config.h)
+AC_CONFIG_HEADERS([src/config.h])
 
 AC_PROG_CC
 AC_PROG_INSTALL
