test-ui: use new flickr plugin
flickr-auth.[ch] was replaced by their oauth alternatives and main.c was
rewritten to use them.

Into authenticate flickr popup window was added text entry to enter the
verifier given by flickr.

https://bugzilla.gnome.org/show_bug.cgi?id=697175

Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/tools/grilo-test-ui/Makefile.am
+++ b/tools/grilo-test-ui/Makefile.am
@@ -11,12 +11,13 @@ bin_PROGRAMS = grilo-test-ui-@GRL_MAJORMINOR@
 
 grilo_test_ui_@GRL_MAJORMINOR@_SOURCES =	\
 	main.c											\
-	flickr-auth.h									\
-	flickr-auth.c
+	flickr-oauth.h									\
+	flickr-oauth.c
 
 grilo_test_ui_@GRL_MAJORMINOR@_CFLAGS =	\
 	-DPREFIX=$(prefix)							\
 	$(GTU_CFLAGS)									\
+	$(OAUTH_CFLAGS)							\
 	$(GRL_FLICKR_CFLAGS)							\
 	-I$(top_srcdir)/src							\
 	-I$(top_srcdir)/src/data
@@ -24,6 +25,7 @@ grilo_test_ui_@GRL_MAJORMINOR@_CFLAGS =	\
 grilo_test_ui_@GRL_MAJORMINOR@_LDADD =		\
 	$(DEPS_LIBS)									\
 	$(GTU_LIBS)										\
+	$(OAUTH_LIBS)							\
 	$(GRL_FLICKR_LIBS)							\
 	$(top_builddir)/src/lib@GRL_NAME@.la
 
