--- a/tools/grilo-test-ui/Makefile.am
+++ b/tools/grilo-test-ui/Makefile.am
@@ -10,14 +10,11 @@ INCLUDES = $(DEPS_CFLAGS)
 bin_PROGRAMS = grilo-test-ui-@GRL_MAJORMINOR@
 
 grilo_test_ui_@GRL_MAJORMINOR@_SOURCES =	\
-	main.c											\
-	flickr-oauth.h									\
-	flickr-oauth.c
+	main.c
 
 grilo_test_ui_@GRL_MAJORMINOR@_CFLAGS =	\
 	-DPREFIX=$(prefix)							\
 	$(GTU_CFLAGS)									\
-	$(OAUTH_CFLAGS)							\
 	$(GRL_FLICKR_CFLAGS)							\
 	-I$(top_srcdir)/src							\
 	-I$(top_srcdir)/src/data
@@ -25,9 +22,22 @@ grilo_test_ui_@GRL_MAJORMINOR@_CFLAGS =	\
 grilo_test_ui_@GRL_MAJORMINOR@_LDADD =		\
 	$(DEPS_LIBS)									\
 	$(GTU_LIBS)										\
-	$(OAUTH_LIBS)							\
 	$(GRL_FLICKR_LIBS)							\
 	$(top_builddir)/src/lib@GRL_NAME@.la
+
+if HAVE_OAUTH
+
+grilo_test_ui_@GRL_MAJORMINOR@_SOURCES +=	\
+	flickr-oauth.h									\
+	flickr-oauth.c
+
+grilo_test_ui_@GRL_MAJORMINOR@_CFLAGS +=	\
+	$(OAUTH_CFLAGS)
+
+grilo_test_ui_@GRL_MAJORMINOR@_LDADD +=	\
+	$(OAUTH_LIBS)
+
+endif
 
 MAINTAINERCLEANFILES =	\
 	*.in						\
