--- a/libs/net/Makefile.am
+++ b/libs/net/Makefile.am
@@ -11,10 +11,11 @@ lib_LTLIBRARIES = libgrlnet-@GRL_MAJORMINOR@.la
 libgrlnet_@GRL_MAJORMINOR@_la_DEPENDENCIES =	\
 	$(top_builddir)/src/lib@GRL_NAME@.la
 
-libgrlnet_@GRL_MAJORMINOR@_la_SOURCES = \
-	grl-net-private.c		\
-	grl-net-wc.c		\
-	grl-net-mock.c
+libgrlnet_@GRL_MAJORMINOR@_la_SOURCES =   \
+	grl-net-mock.c                         \
+	grl-net-private.c                      \
+	grl-net-soup.c                         \
+	grl-net-wc.c
 
 libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS =	\
 	-I $(top_srcdir)/src		\
@@ -22,16 +23,6 @@ libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS =	\
 	-DLOCALEDIR=\"$(localedir)\" \
 	$(DEPS_CFLAGS)			\
 	$(NET_CFLAGS)
-
-if BUILD_GRILO_NET_WITH_CACHE
-libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS += \
-	-DLIBSOUP_WITH_CACHE
-libgrlnet_@GRL_MAJORMINOR@_la_SOURCES += \
-	grl-net-soup-unstable.c
-else
-libgrlnet_@GRL_MAJORMINOR@_la_SOURCES += \
-	grl-net-soup-stable.c
-endif
 
 if BUILD_GRILO_NET_WITH_DEPRECATED_REQUESTER
 libgrlnet_@GRL_MAJORMINOR@_la_CFLAGS += \
@@ -81,10 +72,7 @@ introspection_sources =	\
 	$(gir_sources)
 
 GrlNet-@GRL_MAJORMINOR@.gir: libgrlnet-@GRL_MAJORMINOR@.la
-GrlNet_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 Soup-2.4
-if BUILD_GRILO_NET_WITH_CACHE
-GrlNet_@GRL_MAJORMINOR_NORM@_gir_INCLUDES += Gio-2.0
-endif
+GrlNet_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 Gio-2.0 Soup-2.4
 GrlNet_@GRL_MAJORMINOR_NORM@_gir_CFLAGS = -I $(top_srcdir)/src \
 	-I $(top_srcdir)/src/data -I $(top_srcdir)/libs
 GrlNet_@GRL_MAJORMINOR_NORM@_gir_LIBS = libgrlnet-@GRL_MAJORMINOR@.la \
