net: re-structure code
As we have rid of stable/unstable code due the new libsoup version
requirement, let's merge some files.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,7 +1,5 @@
 libs/net/grl-net-mock.c
-libs/net/grl-net-private.c
-libs/net/grl-net-soup-stable.c
-libs/net/grl-net-soup-unstable.c
+libs/net/grl-net-wc.c
 src/grilo.c
 src/grl-multiple.c
 src/grl-registry.c
