--- a/Makefile.am
+++ b/Makefile.am
@@ -47,7 +47,7 @@ DISTCLEANFILES = $(MAINTAINERCLEANFILES)
 
 EXTRA_DIST = ./m4/introspection.m4
 
-DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc
+DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc --enable-vala
 
 distclean-local:
 	-rm -rf autom4te.cache
