--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -67,5 +67,4 @@ test-report perf-report full-report:	${TEST_PROGS}
 # run make test as part of make check
 check-local: test
 
-MAINTAINERCLEANFILES = \
-	Makefile.in
+-include $(top_srcdir)/git.mk
