pls: Add new Grilo Playlist lib
This utility library allows both plugins and applications to read
playlists as if they were containers, using an API similar to the
Sources.

With additional fixes from Juan A. Suarez Romero and
Bastien Nocera.

https://bugzilla.gnome.org/show_bug.cgi?id=695303

Signed-off-by: Bastien Nocera <hadess@hadess.net>
Signed-off-by: Juan A. Suarez Romero <jasuarez@igalia.com>

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,10 +1,13 @@
 AM_CFLAGS = $(DEPS_CFLAGS) -I$(top_srcdir)/src -I$(top_srcdir)/src/data
 LDADD = $(DEPS_LIBS) $(top_builddir)/src/lib@GRL_NAME@.la
 
-noinst_PROGRAMS = browsing configuring-plugins efficient-metadata-resolution	\
+noinst_PROGRAMS = browsing browsing-pls configuring-plugins efficient-metadata-resolution	\
 	loading-plugins multivalues searching
 
 browsing_SOURCES = browsing.c
+
+browsing_pls_SOURCES = browsing-pls.c
+browsing_pls_LDADD = $(LDADD) $(top_builddir)/libs/pls/libgrlpls-@GRL_MAJORMINOR@.la
 
 configuring_plugins_SOURCES = configuring-plugins.c
 
