build: Avoid self-dependeny in pls
Since GrlPls depends on Grl, we need to use --include-uninstalled
to find the built Grl.gir inside $(top_builddir)/src, instead
of requiring a previous version in the buildroot.

This was caught by Continuous.

--- a/libs/pls/Makefile.am
+++ b/libs/pls/Makefile.am
@@ -53,13 +53,15 @@ introspection_sources =	\
 	$(gir_sources)
 
 GrlPls-@GRL_MAJORMINOR@.gir: libgrlpls-@GRL_MAJORMINOR@.la
-GrlPls_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 Gio-2.0 Grl-@GRL_MAJORMINOR@
+GrlPls_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 Gio-2.0
+GrlPls_@GRL_MAJORMINOR_NORM@_gir_SCANNERFLAGS = --include-uninstalled=$(top_builddir)/src/Grl-@GRL_MAJORMINOR@.gir
 GrlPls_@GRL_MAJORMINOR_NORM@_gir_CFLAGS = -I $(top_srcdir)/src \
 	-I $(top_srcdir)/src/data -I $(top_srcdir)/libs
 GrlPls_@GRL_MAJORMINOR_NORM@_gir_LIBS = libgrlpls-@GRL_MAJORMINOR@.la \
 	$(top_builddir)/src/lib@GRL_NAME@.la
 GrlPls_@GRL_MAJORMINOR_NORM@_gir_FILES = $(introspection_sources)
 INTROSPECTION_GIRS += GrlPls-@GRL_MAJORMINOR@.gir
+INTROSPECTION_COMPILER_ARGS = --includedir=$(top_builddir)/src
 
 girdir = @INTROSPECTION_GIRDIR@
 gir_DATA = $(INTROSPECTION_GIRS)
