pls: Fix build with grilo never installed
This re-applies the fix from:
https://git.gnome.org/browse/grilo/commit/?id=3f66bb29a2d0f81479a435c1fabc80c08c4961be

Which got broken by the wrong de-duplicating done in
5f88b535800d1105439641795ddd2e07fd113744

https://bugzilla.gnome.org/show_bug.cgi?id=724871

--- a/libs/pls/Makefile.am
+++ b/libs/pls/Makefile.am
@@ -46,7 +46,7 @@ gir_sources = $(patsubst %,$(srcdir)/%, $(libgrlpls_@GRL_MAJORMINOR@_la_SOURCES)
 
 INTROSPECTION_GIRS =
 INTROSPECTION_SCANNER_ARGS = --warn-all --add-include-path=$(top_srcdir)/src
-INTROSPECTION_COMPILER_ARGS = --includedir=$(top_srcdir)/src
+INTROSPECTION_COMPILER_ARGS = --includedir=$(top_srcdir)/src --includedir=$(top_builddir)/src
 
 introspection_sources =	\
 	$(gir_headers)	\
